--- a/index.html
+++ b/index.html
@@ -348,10 +348,10 @@
                         <div class="owl-carousel pricing-carousel">
                             <div class="bg-white">
                                 <div class="d-flex align-items-center justify-content-between border-bottom border-primary p-4">
+                                    <h5 class="text-primary text-uppercase m-0">Terapia escolhida</h5>
                                     <h1 class="display-4 mb-0">
                                         <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">R$</small>90<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;">,00</small>
                                     </h1>
-                                    <h5 class="text-primary text-uppercase m-0">Terapia escolhida</h5>
                                 </div>
                                 <div class="p-4">
                                     <p><i class="fa fa-check text-success mr-2"></i>Massage Sueca(Clássica)</p>
@@ -364,10 +364,10 @@
                             </div>
                             <div class="bg-white">
                                 <div class="d-flex align-items-center justify-content-between border-bottom border-primary p-4">
+                                    <h5 class="text-primary text-uppercase m-0">Terapia individualizada</h5>
                                     <h1 class="display-4 mb-0">
                                         <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">R$</small>100<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;">,00</small>
                                     </h1>
-                                    <h5 class="text-primary text-uppercase m-0">Terapia individualizada</h5>
                                 </div>
                                 <div class="p-4">
                                     <p><i class="fa fa-check text-success mr-2"></i>Formulada pelo terapeuta</p>
@@ -548,9 +548,9 @@
                         <h1 class="mb-3 text-white"><span class="text-primary">Will</span> Fisio</h1>
                     </a>
                     <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam  sed clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
-                    <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>Santo André, SP</p>
+                    <p><i class="fa fa-phone-alt mr-2"></i>011 974237159</p>
+                    <p><i class="fa fa-envelope mr-2"></i>williamotavio@gmail.com</p>
                     <div class="d-flex justify-content-start mt-4">
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -600,10 +600,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
-                    <p class="m-0 text-white">&copy; <a href="#">Your Site Name</a>. All Rights Reserved.</p>
+                    <p class="m-0 text-white">&copy; <a href="#">https://willfisio.github.io/</a>. Todos os direitos reservados.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
-                    <p class="m-0 text-white">Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
+                    <p class="m-0 text-white">Desenvolvido por <a href="https://htmlcodex.com">Will Fisio & HTML Codex</a></p>
                 </div>
             </div>
         </div>
