--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
+                            <h3 class="display-3 text-capitalize text-white mb-3">Liberação miofascial <br>(Rolf e Deep Tissue)</h3>
+                            <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum labore diam</p>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item position-relative active" style="min-height: 100vh;">
+                    <img class="position-absolute w-100 h-100" src="img/Massage-Dark.jpg" style="object-fit: cover;">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 900px;">
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Massagem Sueca (Clássica)</h3>
                             <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum labore diam</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
@@ -137,6 +148,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="carousel-item position-relative active" style="min-height: 100vh;">
+                    <img class="position-absolute w-100 h-100" src="img/Massage-Dark.jpg" style="object-fit: cover;">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 900px;">
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
+                            <h3 class="display-3 text-capitalize text-white mb-3">Ventosaterapia</h3>
+                            <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum labore diam</p>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -152,7 +174,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">Sobre</h6>
-                    <h1 class="mb-4">Relaxe, Revitalize e Recupere com as terapias manuais</h1>
+                    <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
                     <p class="pl-4 border-left border-primary">Oferecemos uma variedade de técnicas terapêuticas personalizadas para aliviar o estresse, reduzir a tensão muscular e promover uma sensação de tranquilidade profunda. Nossos tratamentos revitalizantes estimulam a circulação, aumentam a flexibilidade e reenergizam seu corpo e mente. Se você está se recuperando de lesões ou buscando alívio para dores crônicas, estou aqui para ajudar.</p>
                     <div class="row pt-3">
                         <div class="col-6">
@@ -316,13 +338,13 @@
                             <p>Estamos abertos para atendê-lo com cuidado e dedicação, de:</p>
                             <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Unidade - Instituto Fisiologic</h6>
                             <ul class="list-inline">
-                                <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Seg – Sexta: 07:00 - 12:00</li>
+                                <li class="h6 py-1"><i class="far fa-circle text-primary mr-3 clock1"></i>Seg – Sexta: 07:00 - 12:00</li>
                             </ul>
                              <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Unidade - Espaço Hayanna</h6>
                             <ul class="list-inline">
-                                <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Seg – Sexta: 19:00 - 22:00</li>
-                                <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Sabado: 07:00 - 22:00</li>
-                                <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Domingo: 09:00 - 18:00</li>
+                                <li class="h6 py-1"><i class="far fa-circle text-primary mr-3 clock1"></i>Seg – Sexta: 19:00 - 22:00</li>
+                                <li class="h6 py-1"><i class="far fa-circle text-primary mr-3 clock1"></i>Sabado: 07:00 - 22:00</li>
+                                <li class="h6 py-1"><i class="far fa-circle text-primary mr-3 clock2"></i>Domingo: 09:00 - 18:00</li>
                             </ul>
                             <a href="" class="btn btn-primary mt-2">Agendar</a>
                         </div>
@@ -448,10 +470,10 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="img/team-1.jpg" alt="">
+                        <img class="img-fluid" src="img/foto.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <p class="m-0">Massoterapeuta & graduando de fisioterapia</p>
+                                <p class="m-0">Massoterapeuta & <br>graduando em fisioterapia</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -477,8 +499,8 @@
                     <img class="img-fluid w-100" src="img/testimonial.jpg" alt="">
                 </div>
                 <div class="col-lg-6">
-                    <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">Testimonial</h6>
-                    <h1 class="mb-4">What Our Clients Say!</h1>
+                    <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">Depoimentos</h6>
+                    <h1 class="mb-4">O que nossos clientes dizem!</h1>
                     <div class="owl-carousel testimonial-carousel">
                         <div class="position-relative">
                             <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
