--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
                 <li data-target="#header-carousel" data-slide-to="0" class="active"></li>
                 <li data-target="#header-carousel" data-slide-to="1"></li>
                 <li data-target="#header-carousel" data-slide-to="2"></li>
+                <li data-target="#header-carousel" data-slide-to="3"></li>
+                <li data-target="#header-carousel" data-slide-to="4"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item position-relative active" style="min-height: 100vh;">
@@ -115,7 +117,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item position-relative active" style="min-height: 100vh;">
+                <div class="carousel-item position-relative" style="min-height: 100vh;">
                     <img class="position-absolute w-100 h-100" src="img/Massage-Dark.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
@@ -148,7 +150,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item position-relative active" style="min-height: 100vh;">
+                <div class="carousel-item position-relative" style="min-height: 100vh;">
                     <img class="position-absolute w-100 h-100" src="img/Massage-Dark.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
@@ -207,7 +209,7 @@
         </div>
         <div class="owl-carousel service-carousel">
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-1.jpg" alt="">
+                <img class="img-fluid" src="img/pistola.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Pistola de massagem</h4>
                     <p class="text-white px-3 mb-3">Alívio muscular, redução de tensão, melhora da circulação sanguínea, recuperação mais rápida e relaxamento profundo com a pistola de massagem.</p>
@@ -217,7 +219,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-2.jpg" alt="">
+                <img class="img-fluid" src="img/ventosa.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Ventosas</h4>
                     <p class="text-white px-3 mb-3">Melhora da circulação, alívio de dores musculares, redução da inflamação, relaxamento profundo e promoção da saúde geral com as ventosas.</p>
@@ -227,7 +229,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-3.jpg" alt="">
+                <img class="img-fluid" src="img/combinada.webp" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Terapia combinada</h4>
                     <p class="text-white px-3 mb-3">Melhora da cicatrização de tecidos, alívio da dor, redução da inflamação, aumento da circulação e recuperação otimizada com a terapia combinada de ultrassom e corrente interferencial.</p>
@@ -237,7 +239,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-4.jpg" alt="">
+                <img class="img-fluid" src="img/bota.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Bota Pneumática</h4>
                     <p class="text-white px-3 mb-3">Recuperação acelerada, redução do inchaço, melhora da circulação e alívio da dor com o uso da bota pneumática.</p>
@@ -247,7 +249,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-5.jpg" alt="">
+                <img class="img-fluid" src="img/service-3.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Ambiente climatizado</h4>
                     <p class="text-white px-3 mb-3">Conforto máximo durante o tratamento, relaxamento agradável, regulação da temperatura ideal e ambiente climatizado para uma experiência de massoterapia inigualável.</p>
@@ -257,7 +259,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-6.jpg" alt="">
+                <img class="img-fluid" src="img/tens.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">TENS</h4>
                     <p class="text-white px-3 mb-3">Alívio da dor, relaxamento muscular, redução de tensões, promoção da circulação sanguínea e alívio do estresse com a terapia de Estimulação Nervosa Elétrica Transcutânea (TENS)</p>
@@ -412,6 +414,7 @@
                                     </h1>
                                 </div>
                                 <div class="p-4">
+                                    <p><i class="fa fa-check text-success mr-2"></i>Liberação miofascial</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Conceito Rolf</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Deep tissue(tecido profundo)</p>
                                     <a href="" class="btn btn-primary my-2">Agendar</a>
@@ -443,7 +446,7 @@
                                     <p><i class="fa fa-check text-success mr-2"></i>Formulada pelo terapeuta</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Foco na sua necessidade</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Mix de técnicas e breathwork</p>
-                                    <p><i class="fa fa-check text-success mr-2"></i>Utilização de equipamentos</p>
+                                    <p><i class="fa fa-check text-success mr-2"></i>Equipamentos fisioterapêuticos</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Atendimento adaptado</p>
                                     <a href="" class="btn btn-primary my-2">Agendar</a>
                                 </div>
