--- a/index.html
+++ b/index.html
@@ -162,14 +162,7 @@
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+           
         </div>
     </div>
     <!-- Carousel End -->
@@ -403,7 +396,7 @@
 
 
     <!-- Pricing Start -->
-    <div class="container-fluid bg-pricing" style="margin: 90px 0;">
+    <div class="container-fluid bg-pricing" style="margin: 0;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5" style="min-height: 500px;">
