--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div class="carousel-item position-relative" style="min-height: 100vh;">
-                    <img class="position-absolute w-100 h-100" src="img/drenag.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="img/drenag.jpeg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
