--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
-                            <h3 class="display-3 text-white mb-3">Liberação miofascial <br>(Rolf e Deep Tissue)</h3>
+                            <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação miofascial <br><span style="font-size: 2.5rem;">(Conceito Rolf e Deep Tissue)</span></h3>
                             <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum labore diam</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
                         </div>
@@ -220,7 +220,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/ventosa.jpg" alt="">
+                <img class="img-fluid" src="img/ventosa.png" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Ventosas</h4>
                     <p class="text-white px-3 mb-3">Melhora da circulação, alívio de dores musculares, redução da inflamação, relaxamento profundo e promoção da saúde geral com as ventosas.</p>
@@ -496,7 +496,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="container-fluid py-5">
+    <div class="container-fluid">
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
