--- a/index.html
+++ b/index.html
@@ -162,7 +162,14 @@
                     </div>
                 </div>
             </div>
-           
+            <a class="carousel-control-prev" href="#header-carousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+            </a>
+            <a class="carousel-control-next" href="#header-carousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Próximo</span>
+            </a>
         </div>
     </div>
     <!-- Carousel End -->
@@ -337,17 +344,17 @@
                     <div class="col-lg-6 pt-5 pb-lg-5">
                         <div class="hours-text bg-light p-4 p-lg-5 my-lg-5">
                             <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Horário de funcionamento</h6>
-                            <h1 class="mb-4">Venha relaxar e aliviar as dores </h1>
+                            <h1 class="mb-4">Venha relaxar e aliviar dores</h1>
                             <p>Estamos abertos para atendê-lo com cuidado e dedicação, de:</p>
                             <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Unidade - Instituto Fisiologic</h6>
                             <ul class="list-inline">
-                                <li class="h6 py-1"><i class="far fa-circle text-primary mr-3 clock1"></i>Seg – Sexta: 07:00 - 12:00</li>
+                                <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 07:00 - 12:00</li>
                             </ul>
                              <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Unidade - Espaço Hayanna</h6>
                             <ul class="list-inline">
-                                <li class="h6 py-1"><i class="far fa-circle text-primary mr-3 clock1"></i>Seg – Sexta: 19:00 - 22:00</li>
-                                <li class="h6 py-1"><i class="far fa-circle text-primary mr-3 clock1"></i>Sabado: 07:00 - 22:00</li>
-                                <li class="h6 py-1"><i class="far fa-circle text-primary mr-3 clock2"></i>Domingo: 09:00 - 18:00</li>
+                                <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 19:00 - 22:00</li>
+                                <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Sabado: 07:00 - 22:00</li>
+                                <li class="h6 py-1"><i class="far fa-circle text-primary clock2"></i>Domingo: 09:00 - 18:00</li>
                             </ul>
                             <a href="" class="btn btn-primary mt-2">Agendar</a>
                         </div>
@@ -468,7 +475,7 @@
             <div class="row justify-content-center text-center">
                 <div class="col-lg-6">
                     <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Terapeuta</h6>
-                    <h1 class="mb-5">William Souto</h1>
+                    <h1 class="mb-4">William Souto</h1>
                 </div>
             </div>
             <div class="row">
@@ -500,7 +507,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/testimonial.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/test.jpg" alt="">
                 </div>
                 <div class="col-lg-6">
                     <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">Depoimentos</h6>
